--- a/cart.html
+++ b/cart.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1440px, initial-scale=0.28">
     <title>cart</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,8 +40,7 @@
             <p>Корзина</p>
         </div>
 
-        
-        <!-- Корзина -->
+
         <div class="basket">
             <div id="cart" class="cart">
                 <div id="cart_display"></div> 
@@ -60,7 +59,7 @@
                     <label for="tel" class="tel">Ваш номер:</label>
                     <input type="tel" id="tel" required>
                     
-                    <button type="submit" onclick="clearCart()" class="submit-cart">ОФОРМИТЬ</button>
+                    <button type="submit" onclick="clearCart()" class="submit-cart" >ОФОРМИТЬ</button>
                 </form>
                 <p id="messg" class="hidd"></p> 
             </div>
