--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
             <div class="cart-img">
                 <a href='cart.html'><img src="images/cart.svg" alt="корзина" class="imgcart"></a>
-                <div class="cart__num" id="cart_num">0</div> <!-- вутэто -->
+                <div class="cart__num" id="cart_num">0</div> 
             </div>
         </div>
         <div class="header_text">
