--- a/cart.html
+++ b/cart.html
@@ -78,7 +78,7 @@
                     
                     <button type="submit" class="submit-que">ОТПРАВИТЬ</button>
                 </form>
-                <p id="message" class="hidden"></p> 
+                <p id="messag" class="hiddenn"></p> 
         </div>
 
         <footer id="footer">
